# Quasi

./: .gitignore  CMakeLists.txt  MyGame.sln  README.md  link.shell
Game/: CMakeLists.txt  Game.cpp  Game.vcxproj  basic_tex.glsl  imgui.ini  preview.md  test.glsl  text.glsl  untitled.mtl
OpenGL/: .gitignore  CMakeLists.txt  OpenGL.vcxproj  OpenGL.vcxproj.filters  cpp.hint  imgui.ini  planner.md  post_build.bat
OpenGL/Debug/: ConsoleColor.cpp  ConsoleColor.h  Logger.cpp  Logger.h
OpenGL/res/: backup.txt  game_planning.txt
OpenGL/res/levels/: level_test.json
OpenGL/res/shaders/: basic.glsl  basic_ex.frag  basic_tex.glsl
OpenGL/res/textures/: block_texture_atl.json
OpenGL/src/: Application.cpp  Debugging.h  core.h  opengl.h
OpenGL/src/Debug/: ConsoleColor.h  Logger.cpp  Logger.h  internal_debug_break.h
OpenGL/src/Game/: Block.cpp  Block.h  BlockBase.cpp  BlockBase.h  BlockCreation.h  BlockMesh.cpp  BlockMesh.h  BlockPtr.h  BlockRenderer.cpp  BlockRenderer.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  Time.cpp  Time.h  World.cpp  World.h
OpenGL/src/IO/: IO.cpp  IO.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Time.cpp  Time.h  TimeType.cpp  TimeType.h
OpenGL/src/Math/: Color.cpp  Constants.h  Matrix.h  Rect.h  Vector.cpp
OpenGL/src/Maths/: Color.cpp  Color.h  ColorConstants.cpp  Constants.h  Corner.h  Direction.h  GenericVector.h  Geometry.h  Maths.h  Matrix.cpp  Matrix.h  NumTypes.h  Parsing.h  Random.cpp  Random.h  Rect.h  Vector.cpp  Vector.h  VectorImpl.h
OpenGL/src/Physics/: Body2D.cpp  Body2D.h  CircleCollider2D.cpp  CircleCollider2D.h  Collider2D.cpp  Collider2D.h  Collision2D.cpp  Collision2D.h  Shape2D.h  Transform2D.cpp  Transform2D.h  World2D.cpp  World2D.h
OpenGL/src/Utils/: Func.h  Option.h  Ref.h  RichString.h  StringList.h  Text.cpp  Text.h  Variant.h
OpenGL/src/stdu/: enum_utils.h  func.h  io.h  lambdas.h  macros.h  multiline_string.h  optional_ref.h  parsing.h  ref.h  rich_string.cpp  rich_string.h  sorted_vector.h  types.h  unique.h
OpenGL/src/test/: DemoFlappyBird.cpp  Test.h  TestBatchedColored.cpp  TestBatchedColored.h  TestBatchedTextured.cpp  TestBatchedTextured.h  TestClearColor.cpp  TestClearColor.h  TestCubeRender.cpp  TestCubeRender.h  TestDynamicQuadGeometry.cpp  TestDynamicQuadGeometry.h  TestDynamicTris.cpp  TestDynamicTris.h  TestDynamicVertexGeometry.cpp  TestDynamicVertexGeometry.h  TestFontRender.cpp  TestFontRender.h  TestMenu.cpp  TestPostProcessing.cpp  TestPostProcessing.h  TestTexturedSquare.cpp  TestTexturedSquare.h  TestingFramework.h  imgconvert.py
OpenGL/src/utils/: sorted_vector.h
OpenGLPort/: CMakeLists.txt  conv.py  glp.cpp  glp.h
OpenGLPort/OpenGL/: OpenGLAvailability.h
Quasi/: CMakeLists.txt  planner.md  pretty_print.py
Quasi/res/levels/: level_test.json
Quasi/res/shaders/: basic_ex.frag  basic_ex.vert  basic_tex.glsl
Quasi/src/Debug/: ConsoleColor.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
Quasi/src/Graphics/: CameraController.cpp  CameraController2D.cpp  CameraController2D.h  CameraController3D.cpp  CameraController3D.h  Canvas.cpp  Canvas.h  GraphicsDevice.cpp  GraphicsDevice.h  Image.cpp  Image.h  Light.h  Mesh.h  Mesh.tpp  RenderData.cpp  RenderData.h  RenderObject.h  TextureAtlas.cpp  TextureAtlas.h  TriIndices.h  UIVertex.h
Quasi/src/IO/: IO.cpp  IO.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  TimeType.cpp  TimeType.h
Quasi/src/Math/: Angles.h  Color.cpp  Color.h  Complex.cpp  Complex.h  Constants.h  Corner.h  Direction.h  Geometry.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Random.h  Rect.cpp  Rect.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h  Vector.cpp  Vector.h
Quasi/src/Physics/: Body2D.cpp  Body2D.h  CapsuleShape2D.cpp  CapsuleShape2D.h  CircleShape2D.cpp  CircleShape2D.h  Collision2D.cpp  Collision2D.h  IShape2D.h  Manifold2D.cpp  Manifold2D.h  PhysicsTransform2D.cpp  PhysicsTransform2D.h  PolygonShape2D.cpp  PolygonShape2D.h  RectShape2D.cpp  RectShape2D.h  SeperatingAxisSolver.cpp  SeperatingAxisSolver.h  Shape2D.cpp  Shape2D.h  Transform2D.h  World2D.cpp  World2D.h
Quasi/src/Utils/: Algorithm.h  ArenaAllocator.cpp  ArenaAllocator.h  Array.h  ArrayBox.h  Bitwise.cpp  Bitwise.h  Box.h  CStr.cpp  CStr.h  Comparison.h  Enum.h  Format.cpp  Format.h  Func.h  Hash.cpp  Hash.h  HashMap.h  Iterator.h  Lambdas.h  MacroIteration.h  Macros.h  Match.h  Memory.cpp  Memory.h  Numeric.h  Option.h  Range.cpp  Range.h  Ref.h  RichString.cpp  RichString.h  Span.h  Str.cpp  Str.h  String.cpp  String.h  StringList.cpp  StringList.h  Text.cpp  (+5 more)
Testing/: CMakeLists.txt  Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters  imgui.ini
Testing/res/TestAdvancedLighting/: untitled.mtl
Testing/res/TestBatchedTextured/: shader.frag  shader.vert
Testing/res/TestCubeRender/: shader.vert
Testing/res/TestFontRender/: shader.frag  shader.vert
Testing/res/TestPostProcessing/: simple_blur.frag  simple_ed.frag
Testing/src/: DemoFlappyBird.cpp  DemoFlappyBird.h  Test.h  TestAdvancedLighting.cpp  TestAdvancedLighting.h  TestBatchedColored.cpp  TestBatchedColored.h  TestBatchedTextured.cpp  TestBatchedTextured.h  TestClearColor.cpp  TestClearColor.h  TestCubeRender.cpp  TestCubeRender.h  TestDynamicQuadGeometry.cpp  TestDynamicQuadGeometry.h  TestDynamicTris.cpp  TestDynamicTris.h  TestDynamicVertexGeometry.h  TestFontRender.cpp  TestFontRender.h  TestManager.cpp  TestManager.h  TestMenu.cpp  TestMenu.h  TestPostProcessing.cpp  TestPostProcessing.h  TestTexturedSquare.cpp  TestTexturedSquare.h  TestingFramework.h
Testing/src/Advanced/: TestAdvancedLighting.cpp  TestAdvancedLighting.h  TestBezierCurves.cpp  TestBezierCurves.h  TestCubeMap.cpp  TestCubeMap.h  TestDrawInstances.cpp  TestDrawInstances.h  TestFontRender.cpp  TestFontRender.h  TestGeometryShader.cpp  TestGeometryShader.h  TestLightCasters.cpp  TestLightCasters.h  TestMaterialMaps.cpp  TestMaterialMaps.h  TestPostProcessing.cpp  TestPostProcessing.h  TestShadowMap.cpp  TestShadowMap.h  TestStencilOutline.cpp  TestStencilOutline.h
Testing/src/Basic/: TestBatchedTextured.cpp  TestClearColor.h  (+8 more)
(+319 files in other folders)
